# Architecture128

./: .gitignore  CMakeLists.txt  Int128.h  README.md  main.cpp
asm/: add128.asm  and128.asm  mul128.asm  mul128Value.asm  or128.asm  sub128.asm  xor128.asm
